Subo listado propiedades

--- a/PruebaMongo/Views/Property/Agregar.cshtml
+++ b/PruebaMongo/Views/Property/Agregar.cshtml
@@ -2,7 +2,7 @@
 
 <!-- Otros elementos HTML -->
 
-<form method="post" action="/Propiedad/Agregar">
+<form method="post" action="/Property/Agregar">
     <div>
         <label>Título:</label>
         <input type="text" name="Titulo" />
