--- a/PruebaMongo/Views/Shared/_Layout.cshtml
+++ b/PruebaMongo/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="listar">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Propiedad" asp-action="listar">Propiedades</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="listar">Propiedades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Propiedad" asp-action="Agregar">Agregar Propiedades</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Agregar">Agregar Propiedades</a>
                         </li>
                         
                     </ul>
