--- a/PruebaMongo/Views/Property/Agregar.cshtml
+++ b/PruebaMongo/Views/Property/Agregar.cshtml
@@ -2,7 +2,7 @@
 
 <!-- Otros elementos HTML -->
 
-<form method="post" action="/Propiedad/Agregar">
+<form method="post" enctype="multipart/form-data" action="/Property/Agregar">
     <div>
         <label>Título:</label>
         <input type="text" name="Titulo" />
@@ -31,10 +31,7 @@
         <label>Baños:</label>
         <input type="number" name="Banos" />
     </div>
-    <div>
-        <label>Imagen:</label>
-        <input type="text" name="Imagen" />
-    </div>
+
     <div>
         <label>Garaje:</label>
         <input type="checkbox" name="Garaje" />
@@ -46,7 +43,13 @@
         <ul id="amenidadesList"></ul>
         <input type="hidden" name="Amenidades" id="amenidadesHidden" value="" />
     </div>
-   
+
+    <div class="form-group">
+        <label>Ingrese la Imagen</label>
+        <input name="imagen" type="file" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+        <span class="text-danger"></span>
+    </div>
+
     <button type="submit">Guardar</button>
 </form>
 
