--- a/PruebaMongo/Views/Property/Listar.cshtml
+++ b/PruebaMongo/Views/Property/Listar.cshtml
@@ -4,7 +4,7 @@
 
 
 
-<h1 class="mb-4">Listado de Propiedades</h1>
+<h1 class="mb-4">Propiedades</h1>
 @if (Model.Count > 0)
 {
 
@@ -14,18 +14,17 @@
             <a href="/Property/Detalle/@propiedad.Id" class="text-decoration-none text-black">
                 <div class="col">
                     <div class="card">
-                        <img src=@(propiedad.Imagen != null ? propiedad.Imagen : "/Assets/default-house-image.jpg") width="250" class="card-img-top" alt="...">
+                        <img src=@(propiedad.Imagen != null ? propiedad.Imagen : "/Assets/default-house-image.jpg") height="250" width="250" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">@propiedad.Titulo</h5>
-                            <p class="card-text">@propiedad.Descripcion</p>
+                           
                             <p class="card-text">Ubicacion: @propiedad.Ubicacion.Provincia, @propiedad.Ubicacion.Localidad</p>
                             <p class="card-text">Metros Cuadrados: @propiedad.MetrosCuadrados</p>
                             <p class="card-text">Baños: @propiedad.Banos</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">USD$ @propiedad.Precio</small>
-                            <small class="text-muted">Garage: @(propiedad.Garaje ? "Sí" : "No")</small>
-                            <small class="text-muted">Aminedades: @(propiedad.Amenidades != null ? string.Join(", ", propiedad.Amenidades) : "")</small>
+                           
                         </div>
                     </div>
                 </div>
@@ -39,3 +38,5 @@ else
 {
     <p>No se encontraron propiedades.</p>
 }
+ 
+<partial name="_vpNosotrosView"></partial>
