--- a/PruebaMongo/Views/Shared/_Layout.cshtml
+++ b/PruebaMongo/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                             <a class="nav-link text-dark" href="#nosotros">Nosotros</a>
                         </li>
                         <li class="nav-item text-dark-gray">
-                            <a class="nav-link text-dark" href="">Contacto</a>
+                            <a class="nav-link text-dark" href="#contacto">Contacto</a>
                         </li>
                         
                     </ul>
@@ -89,7 +89,7 @@
     @await RenderSectionAsync("Scripts", required: false)
 
 
-    <footer class="bg-more-light-gray" style="background-color: #c2c2c2;">
+    <footer id="contacto" class="bg-more-light-gray" style="background-color: #c2c2c2;">
      
     <div class="container">
         <div class="row py-5">
@@ -122,9 +122,9 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 pb-3">
-                <h3 class="text-uppercase fw-700 fz-21 text-dark-gray pb-3">Suscríbase para recibir novedades</h3>
+                <h3 class="text-uppercase fw-700 fz-21 text-dark-gray pb-3">Contactate con nosotros</h3>
                 <div class="mb-3">
-                    <p class="text-center text-gray" style="display: none;" id="gracias-newsletter">Muchas gracias por suscribirte.</p>
+                    
 
                     <form id="newsletter" method="POST">
                         <div class="mb-3">
@@ -133,9 +133,12 @@
                         <div class="mb-3">
                             <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Email" required>
                         </div>
-                        <div class="col-12 col-lg-10 d-flex justify-content-end mt-3 mb-2">
-                            <div class="g-recaptcha" data-sitekey="6LcTF6EjAAAAAKp_m9OX8CbjygF39SLYLoduxhEO"></div>
+                        <div class="form-group">
+                           
+                                <textarea class="form-control" name="Mensaje" aria-describedby="emailHelp" placeholder="Mensaje" required></textarea>
                         </div>
+
+                        
                         <div class="d-flex justify-content-end">
                             <div class="spinner-border text-info" id="spinner-newsletter" style="display: none;"></div>
                             <button type="submit" class="btn btn-primary px-4" id="btn-newsletter">Enviar</button>
