Agrego de Mensaje

--- a/PruebaMongo/Views/Property/Listar.cshtml
+++ b/PruebaMongo/Views/Property/Listar.cshtml
@@ -38,5 +38,10 @@ else
 {
     <p>No se encontraron propiedades.</p>
 }
- 
-<partial name="_vpNosotrosView"></partial>
+<div class="">
+    <partial name="_vpNosotrosView"></partial>
+</div>
+
+<div class="">
+    @Html.Partial("_vpFooterView", new Contacto())
+</div>
