--- a/PruebaMongo/Views/Property/Agregar.cshtml
+++ b/PruebaMongo/Views/Property/Agregar.cshtml
@@ -14,6 +14,14 @@
                  <label>Descripción:</label>
                 <textarea class="form-control" name="Descripcion"></textarea>
              </div>
+            <div class="form-group">
+                <label>Operacion:</label>
+                <select class="form-control" name="Operacion">
+                    <option value="Alquiler">Alquiler</option>
+                    <option value="Venta">Venta</option>
+                    <option value="Emprendimiento">Emprendimiento</option>
+                </select>
+            </div>
         <div class="form-group">
             <label>Precio:</label>
             <input type="number" class="form-control" name="Precio" step="0.01" />
