--- a/PruebaMongo/Views/Property/Detalle.cshtml
+++ b/PruebaMongo/Views/Property/Detalle.cshtml
@@ -73,3 +73,7 @@
 <div>
     <a asp-action="Listar"  asp-controller="Property">Volver a la lista</a>
 </div>
+<div class="">
+    <partial name="_vpFooterView"></partial>
+
+</div>
