--- a/PruebaMongo/Views/Property/Listar.cshtml
+++ b/PruebaMongo/Views/Property/Listar.cshtml
@@ -1,10 +1,11 @@
 
 @model List<Property>
 
+<div class="" >
+    <partial name="_vpBuscadorView"></partial>
+</div>
 
-
-
-<h1 class="mb-4">Propiedades</h1>
+<h1 class="mb-4"></h1>
 @if (Model.Count > 0)
 {
 
@@ -43,5 +44,6 @@ else
 </div>
 
 <div class="">
-    @Html.Partial("_vpFooterView", new Contacto())
+    <partial name="_vpFooterView"></partial>
+    
 </div>
