--- a/PruebaMongo/Views/Shared/_Layout.cshtml
+++ b/PruebaMongo/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PruebaMongo.styles.css" asp-append-version="true" />
+   
+     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    
+
 </head>
 <body>
     <header>
@@ -94,3 +98,6 @@
    
 </body>
 </html>
+
+
+
