--- a/PruebaMongo/Views/Property/Detalle.cshtml
+++ b/PruebaMongo/Views/Property/Detalle.cshtml
@@ -5,7 +5,7 @@
     Property property = Model.Property;
     User user = Model.User;
 }   
-
+<div class="container">
 <h1>Detalle</h1>
 
 <div>
@@ -82,4 +82,5 @@
 
 <div>
     <a asp-action="Listar" asp-controller="Property">Volver a la lista</a>
+</div>
 </div>
