--- a/PruebaMongo/Views/Property/Listar.cshtml
+++ b/PruebaMongo/Views/Property/Listar.cshtml
@@ -10,7 +10,7 @@
 @if (Model.Count > 0)
 {
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-4">
         @foreach (var propiedad in Model)
         {
             <a href="/Property/Detalle/@propiedad.Id" class="text-decoration-none text-black">
