--- a/PruebaMongo/wwwroot/css/site.css
+++ b/PruebaMongo/wwwroot/css/site.css
@@ -11,9 +11,13 @@ html {
 
 html {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
   margin-bottom: 60px;
+}
+
+.container-fluid{
+    padding:0px;
 }
