agregando view de favoritos

--- a/PruebaMongo/Views/Shared/_Layout.cshtml
+++ b/PruebaMongo/Views/Shared/_Layout.cshtml
@@ -51,6 +51,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="listar">Recomendadas</a>
                             </li>
                             <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Favoritos">Favoritos <img width="15" src="/Assets/filled-star.svg" /></a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Agregar">Agregar Propiedades</a>
                             </li>
 
