--- a/PruebaMongo/Views/Property/Listar.cshtml
+++ b/PruebaMongo/Views/Property/Listar.cshtml
@@ -6,11 +6,12 @@
 </div>
 
 
-
+<div class="container my-5">
 @if (Model.Count > 0)
 {
+     <h1>Propiedades destacadas</h1>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4 my-2">
         @foreach (var propiedad in Model)
         {
             <a href="/Property/Detalle/@propiedad.Id" class="text-decoration-none text-black">
@@ -40,6 +41,8 @@ else
 {
     <h1 class="mb-4">No se Encontraron Propiedades</h1>
 }
+</div>
+
 <div class="">
     <partial name="_vpNosotrosView"></partial>
 </div>
