--- a/PruebaMongo/Views/Shared/_Layout.cshtml
+++ b/PruebaMongo/Views/Shared/_Layout.cshtml
@@ -44,7 +44,9 @@
         <nav class="navbar navbar-expand-lg" style="background-color: #FFE4C4;">
             
             <div class="container" style="background-color: #FFE4C4;">
-                <a class="navbar-brand" asp-area="" asp-controller="Property" asp-action="listar">TuCasa</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Property" asp-action="listar">
+                    <img src="/Assets/logoCasa.com.png" alt="icono-logo" class="px-2" width="60px">
+                </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
