--- a/PruebaMongo/Views/Shared/_vpBuscadorView.cshtml
+++ b/PruebaMongo/Views/Shared/_vpBuscadorView.cshtml
@@ -3,7 +3,7 @@
     <div class=" pb-5 d-none d-lg-block" style="background-color: #c2c2c2;">
         <div class="form d-flex flex-column">
             <div class="graubg">
-                <h2 class="text-black fw-700 fz-40 pb-3">Buscador de propiedades</h2>
+                <h2 class="text-black fw-700 fz-40 pb-3"></h2>
                 <div class="d-flex justify-content-center">
 
                     <form method="get" action="/Property/SearchProperty" style="display: flex; gap: 10px;">
