Arreglo Check de Garage de formulario

--- a/PruebaMongo/Views/Property/Agregar.cshtml
+++ b/PruebaMongo/Views/Property/Agregar.cshtml
@@ -41,7 +41,7 @@
         </div>
         <div class="form-group">
             <label>Garaje:</label>
-            <input type="checkbox" name="Garaje" />
+                <input type="checkbox" name="Garaje" value="true" />
         </div>
         <div class="form-group">
             <label>Amenidades:</label>
